rename alert- -> alert__

--- a/lps-resources/404.html
+++ b/lps-resources/404.html
@@ -28,9 +28,9 @@
           ></path>
         </svg>
       </div>
-      <div class="alert-body">
-        <div class="alert-title">Something went wrong</div>
-        <div class="alert-text">
+      <div class="alert__body">
+        <div class="alert__title">Something went wrong</div>
+        <div class="alert__text">
           Unfortunately, a server error prevented your request from being completed.
           Airbnb may be undergoing maintenance or your connection may have timed
           out. Please refresh the page or try again.
