--- a/alerts.html
+++ b/alerts.html
@@ -13,49 +13,49 @@
          <div class="alert alert-error alert-header">
             <i class="icon alert__icon icon-alert-alt" role="img" aria-label="Error"></i>
             <span class="alert__text-inline">Your request to reset password has already expired. Please try again.</span>
-            <button class="close alert-close" aria-label="Close">
+            <button class="close alert__close" aria-label="Close">
             ×
             </button>
          </div>
          <div class="alert alert-notice alert-info alert-header">
             <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
             <span class="alert__text-inline">A link to reset your password has been sent to randomemail@yahoo.com.</span>
-            <button class="close alert-close" aria-label="Close">
+            <button class="close alert__close" aria-label="Close">
             ×
             </button>
          </div>
          <div class="alert alert-error alert-header">
     <i class="icon alert__icon icon-alert-alt" role="img" aria-label="Error"></i>
     <span class="alert__text-inline">No account exists for aswethink@yahooxr.com. Maybe you signed up using a different/incorrect e-mail address.</span>
-    <button class="close alert-close" aria-label="Close">
+    <button class="close alert__close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-notice alert-info alert-header">
     <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
     <span class="alert__text-inline">Welcome back, Jose! Your password has been updated.</span>
-    <button class="close alert-close" aria-label="Close">
+    <button class="close alert__close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-notice alert-info alert-header">
     <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
     <span class="alert__text-inline">The password reset link has expired.</span>
-    <button class="close alert-close" aria-label="Close">
+    <button class="close alert__close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-notice alert-info alert-header">
     <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
     <span class="alert__text-inline">Please log in to access that page.</span>
-    <button class="close alert-close" aria-label="Close">
+    <button class="close alert__close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-error alert-header">
     <i class="icon alert__icon icon-alert-alt" role="img" aria-label="Error"></i>
     <span class="alert__text-inline">Item is not available.</span>
-    <button class="close alert-close" aria-label="Close">
+    <button class="close alert__close" aria-label="Close">
       ×
     </button>
   </div>
