rename img-full, img-middle, card__media-container

--- a/article.html
+++ b/article.html
@@ -1045,11 +1045,11 @@
                                     <div style="margin-bottom:40px">
                                       <div data-showat="mediumAndAbove">
                                         <div class="_1k656cq">
-                                          <div class="_1h6n1zu"
+                                          <div class="img-middle"
                                             style="display:inline-block;vertical-align:bottom;height:100%;width:100%;min-height:1px"
                                             role="img" aria-busy="false"
                                             aria-label="A Host and guests stand at a kitchen table, one guest sifting flour, ovens and shelves of bread baskets in the background.">
-                                            <img class="_9ofhsl" aria-hidden="true"
+                                            <img class="img-full" aria-hidden="true"
                                                 alt="A Host and guests stand at a kitchen table, one guest sifting flour, ovens and shelves of bread baskets in the background."
                                                 decoding="async" elementtiming="LCP-target"
                                                 src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltbdffd0686ebb0ffe/6308ec0c084d1c663dbbbd55/image1.jpg?crop=100p,84.47p,x0,y10p&amp;width=1050&amp;height=591&amp;auto=webp"
@@ -1312,11 +1312,11 @@
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
-                                                                                <div class="_1h6n1zu"
+                                                                                <div class="img-middle"
                                                                                     style="display:inline-block;vertical-align:bottom;height:100%;width:100%;min-height:1px"
                                                                                     role="img" aria-busy="false"
                                                                                     aria-label="Host in a coffee shop greeting two guests and shaking hands with one of them">
-                                                                                    <img class="_9ofhsl" aria-hidden="true"
+                                                                                    <img class="img-full" aria-hidden="true"
                                                                                         alt="Host in a coffee shop greeting two guests and shaking hands with one of them"
                                                                                         decoding="async" elementtiming="LCP-target"
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt1761114afc405ce7/60b65b93e5c1e719818186ca/pricing-strategies-for-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600"
@@ -1351,11 +1351,11 @@
                                                                     <div class="_w57qiaq">
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
-                                                                                <div class="_1h6n1zu"
+                                                                                <div class="img-middle"
                                                                                     style="display:inline-block;vertical-align:bottom;height:100%;width:100%;min-height:1px"
                                                                                     role="img" aria-busy="false"
                                                                                     aria-label="Ruthy, Host of Lisbon’s Best Flavors, smiling and chatting with her guest">
-                                                                                    <img class="_9ofhsl" aria-hidden="true"
+                                                                                    <img class="img-full" aria-hidden="true"
                                                                                         alt="Ruthy, Host of Lisbon’s Best Flavors, smiling and chatting with her guest"
                                                                                         decoding="async" elementtiming="LCP-target"
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt5ee8be8fc5edbbed/60b663221666081987864c21/2017-10-30-Ruthy-Food-Tour-9.jpeg?crop=16:9&amp;height=900&amp;width=1600"
@@ -1397,11 +1397,11 @@
                                                                             </svg></div>
                                                                         <div data-showat="largeAndAbove">
                                                                             <div class="_3uk7gk">
-                                                                                <div class="_1h6n1zu"
+                                                                                <div class="img-middle"
                                                                                     style="display:inline-block;vertical-align:bottom;height:100%;width:100%;min-height:1px"
                                                                                     role="img" aria-busy="false"
                                                                                     aria-label="Four guests sitting with a Host and posing for a group photo">
-                                                                                    <img class="_9ofhsl" aria-hidden="true"
+                                                                                    <img class="img-full" aria-hidden="true"
                                                                                         alt="Four guests sitting with a Host and posing for a group photo"
                                                                                         decoding="async" elementtiming="LCP-target"
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltafc420e663117644/60b6613b1ea8cc0cc03a2201/DSC05917.jpeg?crop=16:9&amp;height=900&amp;width=1600"
