--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -8972,7 +8972,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       </div>
                     </div>
                     <div class="become-a-host__video-thumbnail" style="transition-delay: 1000ms; transition-duration: 800ms;">
-                      <div class="_1h6n1zu" role="presentation" aria-hidden="true"
+                      <div class="img-middle" role="presentation" aria-hidden="true"
                         style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                         <picture>
                           <source
@@ -9009,7 +9009,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                     class="_cs6f59v">
                     <div class="_1oaklsk" style="overflow: hidden; padding-top: 133%;">
                       <div class="_skzmvy">
-                        <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Experience photo 1"
+                        <div class="img-middle" role="img" aria-busy="false" aria-label="Experience photo 1"
                           style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                           <picture>
                             <source
@@ -9042,7 +9042,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                     class="_cs6f59v">
                     <div class="_1oaklsk" style="overflow: hidden; padding-top: 133%;">
                       <div class="_skzmvy">
-                        <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Experience photo 2"
+                        <div class="img-middle" role="img" aria-busy="false" aria-label="Experience photo 2"
                           style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                           <picture>
                             <source
@@ -9075,7 +9075,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                     class="_cs6f59v">
                     <div class="_1oaklsk" style="overflow: hidden; padding-top: 133%;">
                       <div class="_skzmvy">
-                        <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Experience photo 3"
+                        <div class="img-middle" role="img" aria-busy="false" aria-label="Experience photo 3"
                           style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                           <picture>
                             <source
@@ -9111,7 +9111,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                   class="_cs6f59v">
                   <div class="_1oaklsk" style="overflow: hidden; padding-top: 67%;">
                     <div class="_skzmvy">
-                      <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Experience photo 4"
+                      <div class="img-middle" role="img" aria-busy="false" aria-label="Experience photo 4"
                         style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                         <picture>
                           <source
@@ -21943,7 +21943,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                       <div class="_7gv3ej">
                                         <div class="_1go630p">
                                           <div class="_26mmnvh" role="presentation">
-                                            <div class="_1h6n1zu" role="img" aria-busy="false"
+                                            <div class="img-middle" role="img" aria-busy="false"
                                               aria-label="Experience photo 2"
                                               style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                               <picture>
