--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -326,7 +326,7 @@
                                                   class="idybhsv dir dir-ltr"
                                                 >
                                                   <div
-                                                    class="_1h6n1zu"
+                                                    class="img-middle"
                                                     style="
                                                       display: inline-block;
                                                       vertical-align: bottom;
@@ -449,7 +449,7 @@
                                                   class="idybhsv dir dir-ltr"
                                                 >
                                                   <div
-                                                    class="_1h6n1zu"
+                                                    class="img-middle"
                                                     style="
                                                       display: inline-block;
                                                       vertical-align: bottom;
