--- a/messages-loader.html
+++ b/messages-loader.html
@@ -373,10 +373,10 @@
                                                         style="margin: 10px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
                                                           <div class="_1k62s0t6">
-                                                            <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                            <div class="img-middle" role="img" aria-busy="false"
                                                               aria-label="Message from Airbnb Support"
                                                               style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
-                                                              <img class="_9ofhsl" aria-hidden="true"
+                                                              <img class="img-full" aria-hidden="true"
                                                                 alt="Message from Airbnb Support" decoding="async"
                                                                 elementtiming="LCP-target"
                                                                 src="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg"
@@ -472,9 +472,9 @@
                                                                 <div class="_1x0fg6n">
                                                                   <div class="_1v6xio7">
                                                                     <div class="_1136pv6k">
-                                                                      <div class="_1h6n1zu"
+                                                                      <div class="img-middle"
                                                                         style="display: inline-block; vertical-align: bottom; height: 64px; width: 64px; min-height: 1px;">
-                                                                        <img class="_9ofhsl" aria-hidden="true" alt=""
+                                                                        <img class="img-full" aria-hidden="true" alt=""
                                                                           decoding="async" elementtiming="LCP-target"
                                                                           src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large"
                                                                           data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large"
@@ -583,10 +583,10 @@
                                                               data-testid="message-thread-profile-link" type="button"
                                                               class="_1pl8jcir">
                                                               <div class="_15cornq">
-                                                                <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                <div class="img-middle" role="img" aria-busy="false"
                                                                   aria-label="Select to open user profile for Jose Angelo"
                                                                   style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
-                                                                  <img class="_9ofhsl" aria-hidden="true"
+                                                                  <img class="img-full" aria-hidden="true"
                                                                     alt="Select to open user profile for Jose Angelo"
                                                                     decoding="async" elementtiming="LCP-target"
                                                                     src="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
@@ -643,10 +643,10 @@
                                                         style="margin: 20px 34px 10px 22px;">
                                                         <div class="_x2h9fxk">
                                                           <div class="_1k62s0t6">
-                                                            <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                            <div class="img-middle" role="img" aria-busy="false"
                                                               aria-label="Message from Airbnb Support"
                                                               style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
-                                                              <img class="_9ofhsl" aria-hidden="true"
+                                                              <img class="img-full" aria-hidden="true"
                                                                 alt="Message from Airbnb Support" decoding="async"
                                                                 elementtiming="LCP-target"
                                                                 src="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg"
@@ -860,10 +860,10 @@
                                                               data-testid="message-thread-profile-link" type="button"
                                                               class="_1pl8jcir">
                                                               <div class="_15cornq">
-                                                                <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                <div class="img-middle" role="img" aria-busy="false"
                                                                   aria-label="Select to open user profile for Myrna"
                                                                   style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
-                                                                  <img class="_9ofhsl" aria-hidden="true"
+                                                                  <img class="img-full" aria-hidden="true"
                                                                     alt="Select to open user profile for Myrna"
                                                                     decoding="async" elementtiming="LCP-target"
                                                                     src="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
@@ -1122,10 +1122,10 @@
                                                               data-testid="message-thread-profile-link" type="button"
                                                               class="_1pl8jcir">
                                                               <div class="_15cornq">
-                                                                <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                <div class="img-middle" role="img" aria-busy="false"
                                                                   aria-label="Select to open user profile for Kuniatsu (Host)"
                                                                   style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
-                                                                  <img class="_9ofhsl" aria-hidden="true"
+                                                                  <img class="img-full" aria-hidden="true"
                                                                     alt="Select to open user profile for Kuniatsu (Host)"
                                                                     decoding="async" elementtiming="LCP-target"
                                                                     src="https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_x_medium"
@@ -1327,9 +1327,9 @@
                                             class="_131n1yh">
                                             <div class="_15xwphn">
                                               <div class="_p60foa">
-                                                <div class="_1h6n1zu"
+                                                <div class="img-middle"
                                                   style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px; border-radius: 8px;">
-                                                  <img class="_9ofhsl" aria-hidden="true" alt=""
+                                                  <img class="img-full" aria-hidden="true" alt=""
                                                     elementtiming="LCP-target" loading="lazy"
                                                     src="https://a0.muscache.com/im/pictures/3b8f5bad-0ca7-4414-9ea4-a7e6dfa4e128.jpg?aki_policy=small"
                                                     data-original-uri="https://a0.muscache.com/im/pictures/3b8f5bad-0ca7-4414-9ea4-a7e6dfa4e128.jpg?aki_policy=small"
@@ -1417,10 +1417,10 @@
                                                               data-testid="message-thread-profile-link" type="button"
                                                               class="_1pl8jcir">
                                                               <div class="_15cornq">
-                                                                <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                <div class="img-middle" role="img" aria-busy="false"
                                                                   aria-label="Select to open user profile for Jose Angelo"
                                                                   style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
-                                                                  <img class="_9ofhsl" aria-hidden="true"
+                                                                  <img class="img-full" aria-hidden="true"
                                                                     alt="Select to open user profile for Jose Angelo"
                                                                     decoding="async" elementtiming="LCP-target"
                                                                     src="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
@@ -1518,10 +1518,10 @@
                                                               data-testid="message-thread-profile-link" type="button"
                                                               class="_1pl8jcir">
                                                               <div class="_15cornq">
-                                                                <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                <div class="img-middle" role="img" aria-busy="false"
                                                                   aria-label="Select to open user profile for Adrian"
                                                                   style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
-                                                                  <img class="_9ofhsl" aria-hidden="true"
+                                                                  <img class="img-full" aria-hidden="true"
                                                                     alt="Select to open user profile for Adrian"
                                                                     decoding="async" elementtiming="LCP-target"
                                                                     src="https://a0.muscache.com/im/pictures/user/66074047-3f29-424f-8bd9-469748c2b552.jpg?aki_policy=profile_x_medium"
