--- a/payments/payment.html
+++ b/payments/payment.html
@@ -318,7 +318,7 @@
                                               <div class="_13ty2nn">
                                                 <div class="_1r6rda2">
                                                   <div
-                                                    class="_1h6n1zu"
+                                                    class="img-middle"
                                                     style="
                                                       display: inline-block;
                                                       vertical-align: bottom;
