--- a/edit/about.html
+++ b/edit/about.html
@@ -549,7 +549,7 @@
                                                 <div class="tab__checkbox-mr-16">
                                                   <div class="place__tips-profile-img">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       style="
                                                         display: inline-block;
                                                         vertical-align: bottom;
