--- a/edit/photos.html
+++ b/edit/photos.html
@@ -579,7 +579,7 @@
                                                     <div class="hero-banner__content-bg">
                                                       <div class="_100wjs0">
                                                         <div
-                                                          class="_1h6n1zu"
+                                                          class="img-middle"
                                                           role="img"
                                                           aria-busy="false"
                                                           aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc4MA=="
@@ -804,7 +804,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
@@ -956,7 +956,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
@@ -1108,7 +1108,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
@@ -1260,7 +1260,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
@@ -1412,7 +1412,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
@@ -1564,7 +1564,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
@@ -1716,7 +1716,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
@@ -1868,7 +1868,7 @@
                                                         <div class="hero-banner__content-bg">
                                                           <div class="_100wjs0">
                                                             <div
-                                                              class="_1h6n1zu"
+                                                              class="img-middle"
                                                               role="img"
                                                               aria-busy="false"
                                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2MA=="
@@ -2075,7 +2075,7 @@
                                         <div class="_z8r60f">
                                           <div class="_14tkmhr">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               role="img"
                                               aria-busy="false"
                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
@@ -2139,7 +2139,7 @@
                                           </div>
                                           <div class="_14tkmhr">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               role="img"
                                               aria-busy="false"
                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
@@ -2203,7 +2203,7 @@
                                           </div>
                                           <div class="_14tkmhr">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               role="img"
                                               aria-busy="false"
                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
@@ -2267,7 +2267,7 @@
                                           </div>
                                           <div class="_14tkmhr">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               role="img"
                                               aria-busy="false"
                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
@@ -2331,7 +2331,7 @@
                                           </div>
                                           <div class="_14tkmhr">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               role="img"
                                               aria-busy="false"
                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
@@ -2395,7 +2395,7 @@
                                           </div>
                                           <div class="_14tkmhr">
                                             <div
-                                              class="_1h6n1zu"
+                                              class="img-middle"
                                               role="img"
                                               aria-busy="false"
                                               aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
